--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react",
+  "name": "app-react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,10 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
-    "nodemon": "^1.18.3"
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^1.18.3",
+    "webpack": "^4.16.1",
+    "webpack-dev-middleware": "^3.1.3"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   }
 }
